# WordCounter

./: .gitignore  CMakeLists.txt  README.md  unixCompile.sh  winCompile.bat
CMake/: Debug.cmake  Release.cmake
include/: memstructs.h  utils.h
src/: memstructs.c  utils.c  wordcount.c
tests/: test.cpp
